modified order module route and swagger docs
