# src/routes/order/order.route.ts
@@ -16,7 +16,7 @@ router.post('/orders', authenticate ,addOrder);
 router.get('/orders/user',authenticate ,getUserOrders);
 router.get('/orders/vendor', authenticate, authorizeVendor , vendorOrders);
 router.get('/orders/user/:orderId', authenticate , getUserSingleOrder);
-router.patch('/orders/:orderId',authenticate, authorizeVendor ,changeOrderStatus);
+router.patch('/orders/vendor/:orderId',authenticate, authorizeVendor ,changeOrderStatus);
  
 
 
